--- a/src/Benchmark/Benchmark.csproj
+++ b/src/Benchmark/Benchmark.csproj
@@ -1,7 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Authors>tm011064</Authors>
+    <Product />
+    <Company />
+    <Description>Library to compare execution times of algorithms</Description>
+    <PackageProjectUrl>https://github.com/tm011064/Benchmark</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/tm011064/Benchmark</RepositoryUrl>
+    <NeutralLanguage />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
